--- a/.project
+++ b/.project
@@ -7,5 +7,8 @@
 	<buildSpec>
 	</buildSpec>
 	<natures>
+	<nature>org.eclipse.wst.common.project.facet.core.nature</nature>
+<nature>org.eclipse.wst.common.modulecore.ModuleCoreNature</nature>
+<nature>org.eclipse.jem.workbench.JavaEMFNature</nature>
 	</natures>
 </projectDescription>
